refactor: fix animalsniffer complaint (#63) #61
closes #61